--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -1,3 +1,8 @@
 <div class="start-screen">
     <img src="assets/img/startbox.png" alt="">
+
+    <div class="start-label-box">
+        <img src="assets/img/startlabel.png" alt="">
+    </div>
+    
 </div>
