installed material design and added add-button

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,7 +1,4 @@
-<app-player
-    *ngFor="let player of game.players; let i = index"
-    [ngStyle]="{'top.px': 100 + (i * 120)}"
-    [name]="player"
+<app-player *ngFor="let player of game.players; let i = index" [ngStyle]="{'top.px': 100 + (i * 120)}" [name]="player"
     class="player-position">
 </app-player>
 
@@ -25,3 +22,7 @@
     </div>
 
 </div>
+
+<button mat-fab class="btn-add">
+    <mat-icon>add</mat-icon>
+</button>
