--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -4,7 +4,7 @@
     align-items: center;
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
-    background-color: orange;
+    background-color: rgb(50, 50, 50, 0.8);
 
     span {
         font-size: 32px;
@@ -12,9 +12,13 @@
     }  
 
     img {
-        width: 100px;
-        height: 100px;
+        width: 70px;
+        height: 70px;
         object-fit: cover;
         border-radius: 100%;
     }
+}
+
+.player-active {
+    background-color: orange !important;
 }
