--- a/src/app/game-info/game-info.component.html
+++ b/src/app/game-info/game-info.component.html
@@ -1,9 +1,7 @@
 <mat-card appearance="outlined">
-    <mat-card-title>Titel</mat-card-title>
+    <mat-card-title>{{ title }}</mat-card-title>
 
     <mat-card-content>
-        Content / Description Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, iure labore atque, quidem
-        corrupti repellat earum est aperiam qui esse cupiditate praesentium ut? Similique, quis perspiciatis. Ipsam
-        maxime quo voluptates.
+        {{ description }}
     </mat-card-content>
 </mat-card>
