--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,30 +1,33 @@
-<app-player *ngFor="let player of game.players; let i = index" [ngStyle]="{'top.px': 100 + (i * 90)}"
-    [playerActive]="i == game.currentPlayer" [name]="player" class="player-position">
-</app-player>
+@if(game) {
+@for(player of game.players; track $index){
+<app-player [ngStyle]="{'top.px': 100 + $index * 80 }" [name]="player" class="player-position"
+    [playerActive]="$index == game.currentPlayer" />
+}
 
 <div class="field">
-
     <div class="card-stack">
+        @for(card of [0,1,2,3]; track $index) {
+        <img [ngStyle]="{ 'right.px': $index * 5 }" src="assets/img/cards/card_cover.png" alt="" />
+        }
 
-        <!-- Card stack -->
-        <img *ngFor="let c of [0, 1, 2, 3]; let i = index;" [ngStyle]="{'right.px': i * 5}"
-            src="assets/img/cards/card_cover.png">
+        <img (click)="takeCard()" class="top-card" style="right: 25px" src="assets/img/cards/card_cover.png" alt="" />
 
-        <img (click)="takeCard()" class="top-card" style="right: 25px;" src="assets/img/cards/card_cover.png">
+        @for(card of game.playedCard; track $index) {
+        <img src="assets/img/cards/{{ card }}.png" class="played-card" />
+        }
 
-        <!-- Stack for played cards -->
-        <img *ngFor="let card of game.playedCard" class="played-card" src="assets/img/cards/{{ card }}.png">
-
-        <!-- Current card (animation) -->
-        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 25px;"
-            src="assets/img/cards/{{ currentCard }}.png">
-
+        @if(pickCardAnimation) {
+        <img class="pick-card" style="right: 25px" src="assets/img/cards/{{ currentCard }}.png" alt="" />
+        }
     </div>
-
 </div>
 
-<app-game-info [card]="currentCard" class="pin-bottom"></app-game-info>
+<app-game-info [card]="currentCard" />
 
-<button mat-fab (click)="openDialog()" class="btn-add">
+<button mat-fab color="primary" (click)="openDialog()" class="btn-add">
     <mat-icon>add</mat-icon>
 </button>
+}
+@else {
+<mat-spinner></mat-spinner>
+}
