create new game on firebase database

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -29,5 +29,9 @@
 </button>
 }
 @else {
-<mat-spinner></mat-spinner>
+    @if(error) {
+        <div>GameID does not exist</div>
+    } @else {
+        <mat-spinner></mat-spinner>
+    }
 }
