--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -65,6 +65,10 @@
     position: absolute;
     right: 32px;
     bottom: 32px;
+
+    @media (max-width: 720px) {
+        bottom: 160px;
+    }
 }
 
 .pin-bottom {
@@ -72,4 +76,10 @@
     bottom: 32px;
     left: 100px;
     right: 100px;
+
+    @media (max-width: 720px) {
+        left: 0;
+        right: 0;
+        bottom: 0;
+    }
 }
